# OneXray

./: .env.example  .gitignore  README.md  analysis_options.yaml  firebase.json.example  helper.sh  l10n.yaml  pubspec.yaml
.github/workflows/: build-apple.yml  build.yml  publish.yml  update-package-managers.yml  update-winget.yml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json.example
android/fastlane/: Appfile  Fastfile
assets/md/: privacy.md
build_scripts/: .gitignore  main.py  pyproject.toml  setup_flutter.sh
build_scripts/app/: android.py  apple.py  builder.py  cli.py  command_line.py  config.py  flutter.py  linux.py  windows.py
c/include/: libXray.h
cli/: go.mod
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Fastfile
ios/tunnel/: tunnel.entitlements
lib/: firebase_options.dart.example  main.dart
lib/l10n/: app_en.arb  app_fa.arb  app_ru.arb  app_zh.arb  app_zh_Hant.arb
lib/service/: manager.dart
linux/: CMakeLists.txt  app.cmake
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos_se/: .gitignore  Podfile
pigeon/: message.dart
readme/: FIRST_RUN.md  FIRST_RUN.ru.md  FIRST_RUN.zh_CN.md  README.ru.md  README.zh_CN.md
windows/: CMakeLists.txt  app.cmake
(+533 files in other folders)
